# cxx-record-acceesor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
.github/workflows/: ci.yml
record/: CMakeLists.txt  accessor.h  as_string.h  getter.h  register.cpp  register.h  register_macro.h  register_variadic_macro.h
test/: CMakeLists.txt  data.h  test.cpp
